# google-chat-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  stateless_streamable_server.py
k8s/: README.md  configmap.yaml  deployment.yaml  networkpolicy.yaml  secret.yaml  service.yaml
src/google_chat_mcp/: __init__.py  server.py
src/google_chat_mcp/auth/: __init__.py  google_auth.py
src/google_chat_mcp/tools/: __init__.py  base.py  members.py  messages.py  search.py  spaces.py  webhooks.py
tests/: __init__.py  test_auth.py
